Adding champion zip search block

--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -24257,14 +24257,18 @@ nav.pagination {
 
 /*	Champion Finder
 ---------------------------------------------------------*/
-.wp-block-crown-blocks-champion-finder .location-search-form {
+.wp-block-crown-blocks-champion-finder .location-search-form,
+.wp-block-crown-blocks-champion-zip-search .location-search-form {
   position: relative;
   max-width: 300px; }
-  .wp-block-crown-blocks-champion-finder .location-search-form.submitted .form-footer button[type=submit]:before {
+  .wp-block-crown-blocks-champion-finder .location-search-form.submitted .form-footer button[type=submit]:before,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form.submitted .form-footer button[type=submit]:before {
     display: none; }
-  .wp-block-crown-blocks-champion-finder .location-search-form.submitted .form-footer button[type=submit]:after {
+  .wp-block-crown-blocks-champion-finder .location-search-form.submitted .form-footer button[type=submit]:after,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form.submitted .form-footer button[type=submit]:after {
     display: block; }
-  .wp-block-crown-blocks-champion-finder .location-search-form input[type=text] {
+  .wp-block-crown-blocks-champion-finder .location-search-form input[type=text],
+  .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text] {
     border: none;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 1000px;
@@ -24275,19 +24279,22 @@ nav.pagination {
             box-shadow: none;
     color: #fff;
     padding-right: 3rem; }
-    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-webkit-input-placeholder {
+    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-webkit-input-placeholder, .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text]::-webkit-input-placeholder {
       color: rgba(255, 255, 255, 0.8); }
-    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-moz-placeholder {
+    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-moz-placeholder, .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text]::-moz-placeholder {
       color: rgba(255, 255, 255, 0.8); }
-    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]:-ms-input-placeholder {
+    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]:-ms-input-placeholder, .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text]:-ms-input-placeholder {
       color: rgba(255, 255, 255, 0.8); }
-    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-ms-input-placeholder {
+    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::-ms-input-placeholder, .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text]::-ms-input-placeholder {
       color: rgba(255, 255, 255, 0.8); }
-    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::placeholder {
+    .wp-block-crown-blocks-champion-finder .location-search-form input[type=text]::placeholder,
+    .wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text]::placeholder {
       color: rgba(255, 255, 255, 0.8); }
-  .wp-block-crown-blocks-champion-finder .location-search-form .form-footer {
+  .wp-block-crown-blocks-champion-finder .location-search-form .form-footer,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer {
     margin: 0; }
-    .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit] {
+    .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit],
+    .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button[type=submit] {
       position: absolute;
       right: .75rem;
       top: calc(50% - 1rem);
@@ -24298,7 +24305,8 @@ nav.pagination {
       height: 2rem;
       background-color: transparent;
       border: none; }
-      .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:before {
+      .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:before,
+      .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button[type=submit]:before {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         display: inline-block;
@@ -24326,7 +24334,8 @@ nav.pagination {
         line-height: 1;
         text-indent: 0;
         color: #fff; }
-      .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:after {
+      .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:after,
+      .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button[type=submit]:after {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         display: inline-block;
@@ -24349,9 +24358,6 @@ nav.pagination {
         color: #fff;
         -webkit-animation: fa-spin 2s infinite linear;
                 animation: fa-spin 2s infinite linear; }
-
-.wp-block-crown-blocks-champion-finder .map-container > .inner {
-  padding-top: 130px; }
 
 .gform_wrapper {
   margin-bottom: 1rem;
@@ -25722,62 +25728,69 @@ h1, .h1 {
       font-weight: 700;
       top: -.1em; }
 
-.text-color-light .simple-subscribe-form_wrapper input[type=text] {
+.text-color-light .simple-subscribe-form_wrapper input[type=text],
+.text-color-light .simple-subscribe-form_wrapper input[type=email] {
   -webkit-box-shadow: inset 0 -2px #fff;
           box-shadow: inset 0 -2px #fff;
   color: #fff; }
-  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder, .text-color-light .simple-subscribe-form_wrapper input[type=email]::-webkit-input-placeholder {
     color: rgba(255, 255, 255, 0.5); }
-  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder, .text-color-light .simple-subscribe-form_wrapper input[type=email]::-moz-placeholder {
     color: rgba(255, 255, 255, 0.5); }
-  .text-color-light .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder, .text-color-light .simple-subscribe-form_wrapper input[type=email]:-ms-input-placeholder {
     color: rgba(255, 255, 255, 0.5); }
-  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder, .text-color-light .simple-subscribe-form_wrapper input[type=email]::-ms-input-placeholder {
     color: rgba(255, 255, 255, 0.5); }
-  .text-color-light .simple-subscribe-form_wrapper input[type=text]::placeholder {
+  .text-color-light .simple-subscribe-form_wrapper input[type=text]::placeholder,
+  .text-color-light .simple-subscribe-form_wrapper input[type=email]::placeholder {
     color: rgba(255, 255, 255, 0.5); }
 
 .text-color-light .simple-subscribe-form_wrapper .gfield.gfield_error label,
 .text-color-light .simple-subscribe-form_wrapper .gfield.gfield_error .validation_message {
   color: #fff; }
 
-.text-color-dark .simple-subscribe-form_wrapper input[type=text] {
+.text-color-dark .simple-subscribe-form_wrapper input[type=text],
+.text-color-dark .simple-subscribe-form_wrapper input[type=email] {
   -webkit-box-shadow: inset 0 -2px #1D2F3C;
           box-shadow: inset 0 -2px #1D2F3C;
   color: #2C3E4B; }
-  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder, .text-color-dark .simple-subscribe-form_wrapper input[type=email]::-webkit-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder, .text-color-dark .simple-subscribe-form_wrapper input[type=email]::-moz-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .text-color-dark .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder, .text-color-dark .simple-subscribe-form_wrapper input[type=email]:-ms-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder, .text-color-dark .simple-subscribe-form_wrapper input[type=email]::-ms-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::placeholder {
+  .text-color-dark .simple-subscribe-form_wrapper input[type=text]::placeholder,
+  .text-color-dark .simple-subscribe-form_wrapper input[type=email]::placeholder {
     color: rgba(44, 62, 75, 0.5); }
 
 .simple-subscribe-form_wrapper form {
   display: block;
   position: relative; }
 
-.simple-subscribe-form_wrapper input[type="text"] {
+.simple-subscribe-form_wrapper input[type=text],
+.simple-subscribe-form_wrapper input[type=email] {
   -webkit-box-shadow: inset 0 -2px #1D2F3C;
           box-shadow: inset 0 -2px #1D2F3C;
   color: #2C3E4B;
   font-size: 1.5rem;
   height: auto; }
-  .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder {
+  .simple-subscribe-form_wrapper input[type=text]::-webkit-input-placeholder, .simple-subscribe-form_wrapper input[type=email]::-webkit-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder {
+  .simple-subscribe-form_wrapper input[type=text]::-moz-placeholder, .simple-subscribe-form_wrapper input[type=email]::-moz-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder {
+  .simple-subscribe-form_wrapper input[type=text]:-ms-input-placeholder, .simple-subscribe-form_wrapper input[type=email]:-ms-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder {
+  .simple-subscribe-form_wrapper input[type=text]::-ms-input-placeholder, .simple-subscribe-form_wrapper input[type=email]::-ms-input-placeholder {
     color: rgba(44, 62, 75, 0.5); }
-  .simple-subscribe-form_wrapper input[type=text]::placeholder {
+  .simple-subscribe-form_wrapper input[type=text]::placeholder,
+  .simple-subscribe-form_wrapper input[type=email]::placeholder {
     color: rgba(44, 62, 75, 0.5); }
 
-.simple-subscribe-form_wrapper .gfield:last-child input[type=text] {
+.simple-subscribe-form_wrapper .gfield:last-child input[type=text],
+.simple-subscribe-form_wrapper .gfield:last-child input[type=email] {
   padding-right: 2.5rem; }
 
 .simple-subscribe-form_wrapper .ginput_container_email {
@@ -25794,7 +25807,8 @@ h1, .h1 {
     position: absolute;
     left: 0;
     top: .6rem; }
-  .simple-subscribe-form_wrapper .ginput_container_email input[type=text] {
+  .simple-subscribe-form_wrapper .ginput_container_email input[type=text],
+  .simple-subscribe-form_wrapper .ginput_container_email input[type=email] {
     padding-left: 3rem; }
 
 .simple-subscribe-form_wrapper .gform_footer {
@@ -25854,29 +25868,37 @@ h1, .h1 {
     .wp-block-crown-blocks-nav-menu .menu .wp-block-crown-blocks-dropdown-nav-menu-item .menu-item-link {
       color: inherit; }
 
-.wp-block-crown-blocks-champion-finder .location-search-form input[type=text] {
+.wp-block-crown-blocks-champion-finder .location-search-form input[type=text],
+.wp-block-crown-blocks-champion-zip-search .location-search-form input[type=text] {
   font-family: "Founders Grotesk Mono", monospace; }
 
-.wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:before {
+.wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:before,
+.wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button[type=submit]:before {
   content: '';
   background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%2359CEFF" class="bi bi-chevron-right" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e');
   background-size: 1.5rem;
   background-position: center;
   background-repeat: no-repeat; }
 
-.wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:after {
+.wp-block-crown-blocks-champion-finder .location-search-form .form-footer button[type=submit]:after,
+.wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button[type=submit]:after {
   color: #59CEFF; }
 
-.wp-block-crown-blocks-champion-finder .results .champion {
+.wp-block-crown-blocks-champion-finder .results .champion,
+.wp-block-crown-blocks-champion-zip-search .results .champion {
   font-family: "Founders Grotesk Mono", monospace;
   line-height: 1.1; }
-  .wp-block-crown-blocks-champion-finder .results .champion.active .email a {
+  .wp-block-crown-blocks-champion-finder .results .champion.active .email a,
+  .wp-block-crown-blocks-champion-zip-search .results .champion.active .email a {
     color: #59CEFF; }
-    .wp-block-crown-blocks-champion-finder .results .champion.active .email a:hover {
+    .wp-block-crown-blocks-champion-finder .results .champion.active .email a:hover,
+    .wp-block-crown-blocks-champion-zip-search .results .champion.active .email a:hover {
       color: #a6e5ff; }
-  .wp-block-crown-blocks-champion-finder .results .champion h4 {
+  .wp-block-crown-blocks-champion-finder .results .champion h4,
+  .wp-block-crown-blocks-champion-zip-search .results .champion h4 {
     font-weight: 500; }
-  .wp-block-crown-blocks-champion-finder .results .champion .email a {
+  .wp-block-crown-blocks-champion-finder .results .champion .email a,
+  .wp-block-crown-blocks-champion-zip-search .results .champion .email a {
     color: rgba(89, 206, 255, 0.75);
     text-decoration: underline; }
 
