--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
@@ -166,7 +166,8 @@ h1, .h1 {
 	}
 }
 
-.wp-block-crown-blocks-champion-finder {
+.wp-block-crown-blocks-champion-finder,
+.wp-block-crown-blocks-champion-zip-search {
 	.location-search-form {
 		input[type=text] {
 			font-family: $font-family-mono;
