--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -4137,7 +4137,8 @@
 /*	Champion Finder
 ---------------------------------------------------------*/
 
-.wp-block-crown-blocks-champion-finder {
+.wp-block-crown-blocks-champion-finder,
+.wp-block-crown-blocks-champion-zip-search {
 	.location-search-form {
 		position: relative;
 		max-width: 300px;
